--- a/style.css
+++ b/style.css
@@ -699,6 +699,7 @@ p {
   font-size: 12px;
   font-weight: 500;
   line-height: 18px;
+  font-family: "Poppins";
   text-transform: uppercase;
   background: url("./assets/images/Icon.png") right center no-repeat;
   background-position-x: 90% !important;
@@ -734,6 +735,10 @@ p {
 .select-option .option {
   padding: 16px;
   margin: 0 -16px;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 18px;
+  font-family: "Poppins";
 }
 .select-option .option:hover {
   background-color: #E00000;
